test/libsolidity/syntaxTests/denominations/gwei_as_identifier.sol
contract C {
	uint constant gvon = 1;
}
// ----
// ParserError 2314: (28-32): Expected identifier but got 'gvon'
